# htmx-fastapi

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mock_database.py  noxfile.py  pyproject.toml
requirements/: requirements-dev.txt  requirements-test.txt  requirements.in  requirements.txt
src/htmx_fastapi/: _filters.py  main.py  transaction.py  transactionstore.py
static/css/: base.css  grid.css
static/js/: htmx.min.js
template/: _shared_base.html  gridsample.html  index.html
template/partial/: increment.html  transaction_form.html  transaction_row.html  transactions.html
template/transaction/: index.html
template/transaction/partial/: amounttotal.html  daterange.html  details.html  newrow.html  row.html  row_edit.html  rowcount.html  rowtotal.html  table.html  total.html
tests/: placeholder_test.py  transactionstore_test.py
